--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Enable auto-merge
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GH_ACTION_MERGER_TOKEN }}
           script: |
             await github.rest.pulls.merge({
               owner: context.repo.owner,
